kubernetes/bigdata/data-api-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: data-api
  namespace: bigdata
  labels:
    app: data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
      - name: data-api
        image: harbor.huan.tv/csm-huan/data-api:1.4
        # imagePullPolicy: [Always | Never | IfNotPresent]
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      imagePullSecrets:
      - name: harbor-secret
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
