kubernetes/bigdata/webapp-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
  namespace: bigdata
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: harbor.huan.tv/dev/webapp:v1.0
        # imagePullPolicy: [Always | Never | IfNotPresent]
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      imagePullSecrets:
      - name: harbor-secret
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
