kubernetes/bigdata/data-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api-service
  namespace: bigdata
  labels:
    svc: data-api
spec:
  selector:
    app: data-api
  ports:
  - port: 3000
    targetPort: 3000
