kubernetes/bigdata/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: bigdata
  labels:
    svc: webapp
spec:
  selector:
    app: webapp
  ports:
  - port: 8080
    targetPort: 8080
